# ChangeLog for games-strategy/liquidwar
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/liquidwar/ChangeLog,v 1.9 2004/12/28 23:42:42 ciaranm Exp $

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  07 Nov 2004; Joseph Jezak <josejx@gentoo.org> liquidwar-5.6.2.ebuild:
  Marked ppc stable.

  09 Apr 2004; David Holm <dholm@gentoo.org> liquidwar-5.6.2.ebuild:
  Added to ~ppc.

*liquidwar-5.6.2 (08 Apr 2004)

  08 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> liquidwar-5.6.2.ebuild:
  version bump

*liquidwar-5.6.1 (12 Jan 2004)

  12 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> liquidwar-5.6.1.ebuild:
  version bump (bug 37917)

  06 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> liquidwar-5.5.9.ebuild:
  turn off the messages from the Makefile; more error checking/messages

*liquidwar-5.5.9 (05 Jun 2003)

  05 Jun 2003; Martin Holzer <mholzer@gentoo.org> liquidwar-5.5.9.ebuild:
  Version bumped. closes #19962

*liquidwar-5.5.8 (05 Mar 2003)

  05 Mar 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #15292.

*liquidwar-5.5.7 (12 Dec 2002)

  12 Dec 2002; Mike Frysinger <vapier@gentoo.org> :
  games eclass support and version bump #9018.

*liquidwar-5.5.6 (01 Oct 2002)

  1 Oct 2002; Matthew Turk <satai@gentoo.org> liquidwar-5.5.6.ebuild:
  Fix tetex errors.  Now PS and PDF docs aren't built; but info still is.

*liquidwar-5.5.6 (18 Jul 2002)

  18 Jul 2002; Spider <spider@gentoo.org> liquidwar-5.5.6.ebuild:
  update teh version, just a copy work. 
 
*liquidwar-5.5.3.ebuild (17 julio 2002)

  17 jul 2002; Jose Alberto Suárez López <bass@gentoo.org> Changelog :
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about