@@ -1,6 +1,10 @@
 # ChangeLog for games-strategy/liquidwar
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/liquidwar/ChangeLog,v 1.9 2004/12/28 23:42:42 ciaranm Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/liquidwar/ChangeLog,v 1.10 2005/01/03 04:03:25 vapier Exp $
+
+  02 Jan 2005; Mike Frysinger <vapier@gentoo.org> liquidwar-5.6.2.ebuild:
+  Pass --disable-target-opt since all it does is add -mcpu to CFLAGS #76338 by
+  Simon Stelling.
 
   28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
